...
            android:layout_marginTop="15dp"
            tools:text="0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/totalDos"
            android:accessibilityLiveRegion="polite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textColor="@color/black"
            android:textSize="20sp"
...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <EditText
            android:id="@+id/baseUno"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/hint_base"
            android:inputType="number|numberSigned"
            android:textColor="@color/texto_campo"
            android:textColorHint="@color/texto_campo"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <EditText
            android:id="@+id/puntosUno"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/hint_puntos"
            android:inputType="number|numberSigned"
            android:textColor="@color/texto_campo"
            android:textColorHint="@color/texto_campo"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <EditText
            android:id="@+id/baseDos"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/hint_base"
            android:inputType="number|numberSigned"
            android:textColor="@color/texto_campo"
            android:textColorHint="@color/texto_campo"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <EditText
            android:id="@+id/puntosDos"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:hint="@string/hint_puntos"
            android:inputType="number|numberSigned"
...
            android:layout_marginTop="12dp"
            tools:text="0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <TextView
            android:id="@+id/totalUno"
            android:accessibilityLiveRegion="polite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textColor="@color/black"
            android:textSize="20sp"
...
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnDeshacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:enabled="false"
...
