...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jugUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        tools:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ganUno"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ganUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        tools:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jugDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        tools:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ganDos"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ganDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
